--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "node-fetch": "^2.6.1",
     "python-shell": "^2.0.3",
     "request": "^2.88.2",
-    "socket.io": "^4.0.0"
+    "socket.io": "^4.0.0",
+    "underscore": "^1.13.1"
   }
 }
